force-app/main/default/objects/secret__mdt/secret__mdt.object-meta.xml
<CustomObject>
    <description>Save the Clients secret of app</description>
    <label>secret</label>
    <pluralLabel>secrets</pluralLabel>
</CustomObject>