force-app/main/default/objects/secret__mdt/fields/client__c.field-meta.xml
<CustomField>
    <fullName>client__c</fullName>
    <label>client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>